docker filr added

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>juzzIt_education_project</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +45,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>juzzIt</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
