--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=7p21C4GkDqt7MS54syq0
 server.port=8082	
-spring.datasource.url=jdbc:mysql://localhost:3306/newjuzzit
+spring.datasource.url=jdbc:mysql://root:7p21C4GkDqt7MS54syq0@containers-us-west-57.railway.app:6067/railway
