--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,31 @@
 
 
 
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.username=root
+#spring.datasource.password=root
+#server.port=8082	
+#spring.datasource.url=jdbc:mysql://root:root@localhost:3306/railway
+
+#
+#spring.datasource.username=sql12663495
+#spring.datasource.password=Z2jwPTEffa
+#server.port=8080	
+#spring.datasource.url=jdbc:mysql://sql12663495:Z2jwPTEffa@sql12.freemysqlhosting.net:3306/sql12663495
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+	
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_3Tl33RToikDZKn-U7aY
+server.port=8080	
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_3Tl33RToikDZKn-U7aY@mysql-183641c4-sunilbande44-ee0d.a.aivencloud.com:24535/defaultdb
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=root
-server.port=8082	
-spring.datasource.url=jdbc:mysql://root:root@localhost:3306/railway
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
